--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "redux-simple-starter",
+  "homepage": "https://dsopel94.github.io/SimpleReduxProject/",
   "version": "1.0.0",
   "description": "Simple starter package for Redux with React and Babel support",
   "main": "index.js",
